# ctest

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: ctest.h  ctest_types.h
src/: CMakeLists.txt  ctest.c  ctest.h  ctest_types.h  ctest_util.c  ctest_util.h  testrunner.c  testrunner.h
test/: CMakeLists.txt  test.c
